<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/bottom_sheet"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"

            app:cardCornerRadius="10dp"
            android:elevation="20dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="270dp">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/img_anim"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:adjustViewBounds="true"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/animation_ll00q4si"
                app:lottie_speed="1"
              />




        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/spinner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />
                <Spinner
                    android:id="@+id/spinner_model"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/spinner_years"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <EditText
                android:id="@+id/ed_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_car_price_txt"
                android:inputType="number"
                android:digits="1234567890"
                android:background="@drawable/ed_bg"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/ed_mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_car_mileage_txt"
                android:inputType="number"

                android:digits="1234567890"
                android:background="@drawable/ed_bg"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/ed_door"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_car_door_txt"
                android:maxLength="1"
                android:digits="1234567890"
                android:inputType="number"
                android:background="@drawable/ed_bg"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/ed_engine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_car_engine_txt"
                android:background="@drawable/ed_bg"
                android:padding="10dp"
                android:inputType="text"
                android:layout_margin="10dp"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_ready"

            android:layout_below="@+id/ll_view"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_car_black"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="28dp"
                android:layout_margin="8dp"
                android:elevation="10dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:layout_width="60dp"
                android:layout_height="60dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_car_gray"

                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="28dp"
                android:layout_margin="8dp"
                android:elevation="10dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/gray"
                android:layout_width="60dp"
                android:layout_height="60dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_car_white"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="28dp"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:elevation="10dp"
                android:backgroundTint="@color/white"
                android:layout_width="60dp"
                android:layout_height="60dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_car_yellow"
                android:textColor="@color/teal_200"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="28dp"
                android:layout_margin="8dp"
                android:elevation="10dp"
                android:backgroundTint="@color/yellow"
                android:layout_width="60dp"
                android:layout_height="60dp"
                 />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_car_brown"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                app:cornerRadius="28dp"
                android:layout_margin="8dp"
                android:elevation="10dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/brown"
                android:layout_width="60dp"
                android:layout_height="60dp"
               />


        </LinearLayout>


        <Button
            android:id="@+id/btn_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/ready"
            android:enabled="false"
            android:background="@drawable/bg_btn"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        
        
        
        

        
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>